tests/rosetta/transpiler/Haskell/2048.error
run: exit status 1

/workspace/mochi/tests/rosetta/transpiler/Haskell/2048.hs:69:17: error:
    parse error on input ‘=’
    Suggested fix:
      Perhaps you need a 'let' in a 'do' block?
      e.g. 'let x = 5' instead of 'x = 5'
   |
69 |         in loop = do
   |                 ^
